--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
@@ -20,17 +21,14 @@
             <hr>
             <div>
                 <h3>Custom </h3>
-                <div class="customList" style="border: 1px solid lightblue;">
-                    <input type="text" name="customListExample" list="customListItems">
-                    <ul id="customListItems">
-                    </ul>
+                <div class="customList">
+                    <input type="text" name="customListExample">
+                    <ul></ul>
                 </div>
             </div>
-            <hr>
         </form>
-        <hr>
-        <div>
-            <h1 style="display: none;">hello</h1>
+
+        <div style="display:none;">
             <button id="menubutton" aria-haspopup="true" aria-controls="menu">
                 >>
             </button>
