fix menu styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h3>Custom </h3>
                 <div class="customList">
                     <input type="text" name="customListExample">
-                    <ul></ul>
+                    <div></div>
                 </div>
             </div>
         </form>
