--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
             </div>
         </form>
 
-        <div style="display:none;">
+        <div>
+            <h4>Lorem</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repellat repudiandae reiciendis
+                exercitationem quidem sapiente animi aut fugit minus molestiae a veritatis error possimus explicabo
+                nulla, ipsa nesciunt delectus nihil hic dolorum dolore veniam. Voluptatum quisquam ipsam aspernatur
+                officia excepturi fugit amet ullam explicabo consequuntur delectus, qui placeat, voluptates, dolorum hic
+                vel temporibus obcaecati atque esse voluptatem vitae aut nobis nemo quo reiciendis? Incidunt facere
+                officia ab ipsum, maxime quibusdam.</p>
             <button id="menubutton" aria-haspopup="true" aria-controls="menu">
                 >>
             </button>
