refactor for multiple widgets

--- a/index.html
+++ b/index.html
@@ -11,60 +11,26 @@
 <body>
     <main class="container">
         <form>
-            <div>
-                <h3>Datalist</h3>
-                <p>Choose a Fruit</p>
-                <input type="text" name="dataListExample" list="dataListItems">
-                <datalist id="dataListItems">
-                </datalist>
+            <h3>Choose a Fruit</h3>
+            <div id="fruitsMenu" class="customList">
+                <input type="text">
+                <div></div>
             </div>
-            <hr>
-            <div>
-                <h3>Custom </h3>
-                <div class="customList">
-                    <input type="text" name="customListExample">
-                    <div></div>
-                </div>
+            <h3>Choose a Veggie</h3>
+            <div id="veggiesMenu" class="customList">
+                <input type="text">
+                <div></div>
             </div>
         </form>
 
-        <div>
-            <h4>Lorem</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repellat repudiandae reiciendis
-                exercitationem quidem sapiente animi aut fugit minus molestiae a veritatis error possimus explicabo
-                nulla, ipsa nesciunt delectus nihil hic dolorum dolore veniam. Voluptatum quisquam ipsam aspernatur
-                officia excepturi fugit amet ullam explicabo consequuntur delectus, qui placeat, voluptates, dolorum hic
-                vel temporibus obcaecati atque esse voluptatem vitae aut nobis nemo quo reiciendis? Incidunt facere
-                officia ab ipsum, maxime quibusdam.</p>
-            <button id="menubutton" aria-haspopup="true" aria-controls="menu">
-                >>
-            </button>
-            <ul id="menu" role="menu" aria-labelledby="menubutton">
-                <li role="presentation">
-                    <a role="menuitem" href="#description">Description</a>
-                </li>
-                <li role="presentation">
-                    <a role="menuitem" href="#associated_wai-aria_roles_states_and_properties">
-                        Associated WAI-ARIA roles, states, and properties
-                    </a>
-                </li>
-                <li role="presentation">
-                    <a role="menuitem" href="#keyboard_interactions">
-                        Keyboard interactions
-                    </a>
-                </li>
-                <li role="presentation">
-                    <a role="menuitem" href="#examples">Examples</a>
-                </li>
-                <li role="presentation">
-                    <a role="menuitem" href="#specifications">Specifications</a>
-                </li>
-                <li role="presentation">
-                    <a role="menuitem" href="#see_also">See Also</a>
-                </li>
-            </ul>
-        </div>
+        <h4>ComboBox</h4>
 
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repellat repudiandae reiciendis
+            exercitationem quidem sapiente animi aut fugit minus molestiae a veritatis error possimus explicabo
+            nulla, ipsa nesciunt delectus nihil hic dolorum dolore veniam. Voluptatum quisquam ipsam aspernatur
+            officia excepturi fugit amet ullam explicabo consequuntur delectus, qui placeat, voluptates, dolorum hic
+            vel temporibus obcaecati atque esse voluptatem vitae aut nobis nemo quo reiciendis? Incidunt facere
+            officia ab ipsum, maxime quibusdam.</p>
     </main>
 
     <script src="scripts/index.js"></script>
