rename classname update hm pg

--- a/index.html
+++ b/index.html
@@ -4,27 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ComboBox Exploration</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
+    <h1>ComboBox</h1>
+
     <main class="container">
         <form>
             <h3>Choose a Fruit</h3>
-            <div id="fruitsMenu" class="customList">
+            <div id="fruitsMenu" class="comboBox">
                 <input type="text">
                 <div></div>
             </div>
+
             <h3>Choose a Veggie</h3>
-            <div id="veggiesMenu" class="customList">
+            <div id="veggiesMenu" class="comboBox">
                 <input type="text">
                 <div></div>
             </div>
         </form>
 
-        <h4>ComboBox</h4>
+        <h4>Exploration</h4>
+        <p>So this is an exploration of my own <a
+                href="https://www.w3.org/WAI/ARIA/apg/patterns/combobox/#:~:text=A%20combobox%20is%20an%20input,the%20popup%20presents%20suggested%20values"
+                target="_blank" rel="noopener noreferrer">combox box</a>. Some of the features I hope to solve would
+            be:</p>
+        <ul>
+            <li>No <i>internal</i> styling (so it can styled by libraries like Bootstrap)</li>
+            <li>Ease of use</li>
+            <li>Maybe multiple selections</li>
+        </ul>
 
+        <h4>Other Resources</h4>
+
+        <ul>
+            <li>
+                <a href="https://www.w3schools.com/tags/tag_datalist.asp" target="_blank"
+                    rel="noopener noreferrer">Datalist tag</a>
+            </li>
+            <li>
+                <a href="https://www.dom-tricks.com/click-outside" target="_blank" rel="noopener noreferrer">DOM Clicks
+                    (outside)</a>
+            </li>
+        </ul>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repellat repudiandae reiciendis
             exercitationem quidem sapiente animi aut fugit minus molestiae a veritatis error possimus explicabo
             nulla, ipsa nesciunt delectus nihil hic dolorum dolore veniam. Voluptatum quisquam ipsam aspernatur
@@ -37,4 +61,3 @@
 </body>
 
 </html>
-<!-- https://www.w3schools.com/tags/tag_datalist.asp-->
