--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My exploration of the combox box and additional features.">
     <title>ComboBox Exploration</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
@@ -13,20 +14,20 @@
 
     <main class="container">
         <form>
-            <h3>Choose a Fruit</h3>
+            <p><label for="fruitsInput"><b>Choose a Fruit</b></label></p>
             <div id="fruitsMenu" class="comboBox">
-                <input type="text">
+                <input type="text" id="fruitsInput">
                 <div></div>
             </div>
 
-            <h3>Choose a Veggie</h3>
+            <p><label for="veggiesInput"><b>Choose a Veggie</b></label></p>
             <div id="veggiesMenu" class="comboBox">
-                <input type="text">
+                <input type="text" id="veggiesInput">
                 <div></div>
             </div>
         </form>
 
-        <h4>Exploration</h4>
+        <h2>Exploration</h2>
         <p>So this is an exploration of my own <a
                 href="https://www.w3.org/WAI/ARIA/apg/patterns/combobox/#:~:text=A%20combobox%20is%20an%20input,the%20popup%20presents%20suggested%20values"
                 target="_blank" rel="noopener noreferrer">combox box</a>. Some of the features I hope to solve would
@@ -37,7 +38,7 @@
             <li>Maybe multiple selections</li>
         </ul>
 
-        <h4>Other Resources</h4>
+        <h2>Other Resources</h2>
 
         <ul>
             <li>
