--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
     <h1>ComboBox</h1>
 
     <main class="container">
-        <form>
-            <p><label for="fruitsInput"><b>Choose a Fruit</b></label></p>
-            <div id="fruitsMenu" class="comboBox">
-                <input type="text" id="fruitsInput">
-                <div></div>
-            </div>
 
-            <p><label for="veggiesInput"><b>Choose a Veggie</b></label></p>
-            <div id="veggiesMenu" class="comboBox">
-                <input type="text" id="veggiesInput">
-                <div></div>
-            </div>
-        </form>
+        <p><label for="fruitsInput"><b>Choose a Fruit</b></label></p>
+        <div id="fruitsMenu" class="comboBox">
+            <input type="text" id="fruitsInput" autocomplete="off">
+            <div></div>
+        </div>
+
+        <p><label for="veggiesInput"><b>Choose a Veggie</b></label></p>
+        <div id="veggiesMenu" class="comboBox">
+            <input type="text" id="veggiesInput" autocomplete="off">
+            <div></div>
+        </div>
 
         <h2>Exploration</h2>
         <p>So this is an exploration of my own <a
