button toggles menu

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
         <p><label for="fruitsInput"><b>Choose a Fruit</b></label></p>
         <div id="fruitsMenu" class="comboBox">
-            <input type="text" id="fruitsInput" autocomplete="off">
+            <input type="text" id="fruitsInput" autocomplete="off"><button>></button>
             <div></div>
         </div>
 
         <p><label for="veggiesInput"><b>Choose a Veggie</b></label></p>
         <div id="veggiesMenu" class="comboBox">
-            <input type="text" id="veggiesInput" autocomplete="off">
+            <input type="text" id="veggiesInput" autocomplete="off"><button>></button>
             <div></div>
         </div>
 
@@ -57,7 +57,7 @@
             officia ab ipsum, maxime quibusdam.</p>
     </main>
 
-    <script src="scripts/index.js"></script>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
