esc key and other stuff

--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
 
     <main class="container">
 
-        <p><label for="fruitsInput"><b>Choose a Fruit</b></label></p>
-        <div id="fruitsMenu" class="comboBox">
-            <input type="text" id="fruitsInput" autocomplete="off"><button>></button>
+        <p><label for="fruits1Input"><b>Choose a 1st Fruit</b></label></p>
+        <div id="fruits1Menu" class="comboBox">
+            <input type="text" id="fruits1Input" autocomplete="off"><button>></button>
             <div></div>
         </div>
 
-        <p><label for="veggiesInput"><b>Choose a Veggie</b></label></p>
-        <div id="veggiesMenu" class="comboBox">
-            <input type="text" id="veggiesInput" autocomplete="off"><button>></button>
+        <p><label for="fruits2Input"><b>Choose a 2nd Fruit</b></label></p>
+        <div id="fruits2Menu" class="comboBox">
+            <input type="text" id="fruits2Input" autocomplete="off"><button>></button>
+            <div></div>
+        </div>
+
+        <p><label for="fruits3Input"><b>Choose Fruits</b></label></p>
+        <div id="fruits3Menu" class="comboBox">
+            <input type="text" id="fruits3Input" autocomplete="off"><button>></button>
             <div></div>
         </div>
 
