--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="My exploration of the combox box and additional features.">
     <title>Exploring the ComboBox</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
