--- a/index.html
+++ b/index.html
@@ -26,33 +26,27 @@
         <ul>
             <li><b>No styles</b> - leaves that to developers/libraries</li>
             <li>Supports <b>single</b> or <b>mulitple</b> selections</li>
-            <li>Navigable with <b>tabs</b> (well, sorta)</li>
+            <li><b>A11y</b> compliant (well, sorta)</li>
         </ul>
 
         <div id="examples">
             <!-- example 1 -->
-            <h2>Example 1</h2>
-            <p>Below are two <b>single select</b> menus. Clicking one closes a previously opened menu and opens on the
-                widget that is in
-                focus.</p>
+            <h2>Example 1: Single Select Menus</h2>
 
-            <p><label for="fruits1Input"><b>Choose a 1st Fruit</b></label></p>
+            <p><label for="fruits1Input"><b>Choose a Fruit</b></label></p>
             <div id="fruits1Menu" class="comboBox">
                 <input type="text" id="fruits1Input" autocomplete="off"><button>></button>
                 <div tabindex="1"></div>
             </div>
 
-            <p><label for="fruits2Input"><b>Choose a 2nd Fruit</b></label></p>
+            <p><label for="fruits2Input"><b>Choose another Fruit</b></label></p>
             <div id="fruits2Menu" class="comboBox">
                 <input type="text" id="fruits2Input" autocomplete="off"><button>></button>
                 <div></div>
             </div>
 
             <!-- example 2 -->
-            <h2>Example 2</h2>
-            <p>This is a <b>multi-select</b> menu which is always displayed and allows multiple selections via a
-                scrollbox.
-            </p>
+            <h2>Example 2: Multi Select Menu</h2>
 
             <p><label for="fruits3Input"><b>Choose Multiple Fruits</b></label></p>
             <div id="fruits3Menu" class="comboBox">
