fix btn + and -

--- a/index.html
+++ b/index.html
@@ -33,14 +33,20 @@
             <p><label for="fruits1Input"><b>Choose a Fruit</b></label></p>
             <div id="fruits1Menu" class="comboBox">
                 <input type="text" id="fruits1Input" autocomplete="off"><button>></button>
-                <div tabindex="1"></div>
+                <div></div>
+            </div>
+
+            <p><label for="fruits2Input"><b>Choose a Fruit</b></label></p>
+            <div id="fruits2Menu" class="comboBox">
+                <input type="text" id="fruits2Input" autocomplete="off"><button>></button>
+                <div></div>
             </div>
 
             <!-- example 2 -->
             <h2>Example 2: Multi-Select</h2>
-            <p><label for="fruits2Input"><b>Choose Multiple Fruits</b></label></p>
-            <div id="fruits2Menu" class="comboBox">
-                <input type="text" id="fruits2Input" autocomplete="off"><button>></button>
+            <p><label for="fruits3Input"><b>Choose Multiple Fruits</b></label></p>
+            <div id="fruits3Menu" class="comboBox">
+                <input type="text" id="fruits3Input" autocomplete="off"><button>></button>
                 <div></div>
             </div>
         </div>
