remove btn from multi select mnu

--- a/index.html
+++ b/index.html
@@ -28,25 +28,28 @@
         </ul>
 
         <div id="examples">
-            <!-- example 1 -->
             <h2>Example 1: Single Select</h2>
+
+            <!-- example 1a single select mnu -->
             <p><label for="fruits1Input"><b>Choose a Fruit</b></label></p>
             <div id="fruits1Menu" class="comboBox">
-                <input type="text" id="fruits1Input" autocomplete="off"><button>></button>
+                <input type="text" id="fruits1Input" autocomplete="off"><button>+</button>
                 <div></div>
             </div>
 
+            <!-- example 1b single select mnu -->
             <p><label for="fruits2Input"><b>Choose a Fruit</b></label></p>
             <div id="fruits2Menu" class="comboBox">
-                <input type="text" id="fruits2Input" autocomplete="off"><button>></button>
+                <input type="text" id="fruits2Input" autocomplete="off"><button>+</button>
                 <div></div>
             </div>
 
-            <!-- example 2 -->
             <h2>Example 2: Multi-Select</h2>
+
+            <!-- example 2 multi select mnu -->
             <p><label for="fruits3Input"><b>Choose Multiple Fruits</b></label></p>
             <div id="fruits3Menu" class="comboBox">
-                <input type="text" id="fruits3Input" autocomplete="off"><button>></button>
+                <input type="text" id="fruits3Input" autocomplete="off">
                 <div></div>
             </div>
         </div>
