--- a/index.html
+++ b/index.html
@@ -18,41 +18,35 @@
         <p>Exploring the <a
                 href="https://www.w3.org/WAI/ARIA/apg/patterns/combobox/examples/combobox-autocomplete-list/"
                 target="_blank" rel="noopener noreferrer">Editable Combobox With Autocomplete</a>.</p>
+        <p><strong>Features</strong>: Un-opinionated styling, single or multiple selections, A11y compliant (sorta).</p>
 
-        <!-- features -->
-        <h2>Features</h2>
-        <ul>
-            <li>Un-opinionated styling</li>
-            <li>Single or mulitple selections</li>
-            <li>A11y compliant</li>
-        </ul>
+        <!-- examples -->
+        <!-- <div id="examples"> -->
+        <h2>Single Select</h2>
 
-        <div id="examples">
-            <h2>Example 1: Single Select</h2>
-
-            <!-- example 1a single select mnu -->
-            <p><label for="fruits1Input"><b>Choose a Fruit</b></label></p>
-            <div id="fruits1Menu" class="comboBox">
-                <input type="text" id="fruits1Input" autocomplete="off"><button>+</button>
-                <div></div>
-            </div>
-
-            <!-- example 1b single select mnu -->
-            <p><label for="fruits2Input"><b>Choose a Fruit</b></label></p>
-            <div id="fruits2Menu" class="comboBox">
-                <input type="text" id="fruits2Input" autocomplete="off"><button>+</button>
-                <div></div>
-            </div>
-
-            <h2>Example 2: Multi-Select</h2>
-
-            <!-- example 2 multi select mnu -->
-            <p><label for="fruits3Input"><b>Choose Multiple Fruits</b></label></p>
-            <div id="fruits3Menu" class="comboBox">
-                <input type="text" id="fruits3Input" autocomplete="off">
-                <div></div>
-            </div>
+        <!-- example 1a single select mnu -->
+        <p><label for="fruits1AInput"><b>Choose a Fruit</b></label></p>
+        <div id="fruits1AMenu" class="comboBox">
+            <input type="text" id="fruits1AInput" autocomplete="off"><button>+</button>
+            <div></div>
         </div>
+
+        <!-- example 1b single select mnu -->
+        <p><label for="fruits1BInput"><b>Choose a Fruit</b></label></p>
+        <div id="fruits1BMenu" class="comboBox">
+            <input type="text" id="fruits1BInput" autocomplete="off"><button>+</button>
+            <div></div>
+        </div>
+
+        <h2>Multi-Select</h2>
+
+        <!-- example 2 multi select mnu -->
+        <p><label for="fruits2Input"><b>Choose Multiple Fruits</b></label></p>
+        <div id="fruits2Menu" class="comboBox">
+            <input type="text" id="fruits2Input" autocomplete="off">
+            <div></div>
+        </div>
+        <!-- </div> -->
     </main>
 
     <script type="module" src="scripts/index.js"></script>
